2004-04-13  Andras Varga

	* cmessage.cc: implemented new cMessage methods setControlInfo(), 
	removeControlInfo(), controlInfo().

2004-04-04  Andras Varga

	* simplemodule.cc: cancelEvent(): don't throw error if message is not
	currently scheduled, just return.

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-23  Andras Varga

	* cmodule.cc: added changeParentTo() to cModule.

2004-02-22  Andras Varga

	* cmodule.cc: added gateSize() to cModule.

2004-02-21  Andras Varga

	* cmodule.cc: setGateSize() made more tolerant; this is needed for
	"gate++" NED feature (see nedxml/ChangeLog)

	* cpar.cc: turned type character into English type names in cPar error
	messages, e.g. "Cannot cast from type `D' to `S'" became 
	"Cannot cast from type double (D) to string (S)'".

2004-02-20  Andras Varga

	* ctype.cc, cchannel.cc, cgate.cc: introduced cChannelType which 
	replaces cLinkType. See include/ChangeLog for more info.

2004-02-12  Andras Varga

	* cmodule.cc, cgate.cc, cchannel.cc: gave a bool return value to 
	deliver(), "false" meaning that message object should be deleted.

2004-02-11  Andras Varga 

	* csimul.cc, cscheduler.cc: semantic change of getNextEvent()'s and
	selectNextModule()'s return value (see include/ChangeLog)

2004-02-10  Andras Varga 

	* cexception.cc: added storage of module class name (NED type name)

2004-02-09  Andras Varga 

	* ctypes.cc: added methods to cModuleInterface so that it's possible
	to dynamically assemble it (needed by networkbuilder)

2004-02-07  Andras Varga 

	* ctypes.cc: added createOneIfClassIsKnown(const char *classname)

	* cstruct.cc: fix createDescriptorFor() to prepare for missing 
	descriptor object

2004-02-06  Andras Varga

	* cgate.cc: implemented cGate::disconnect(); revised cGate::connectTo()

	* cchannel.cc: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------
