@@ -1,3 +1,7 @@
+2004-04-16  Andras Varga
+
+	* cpar.cc, cenum.cc: fixed two possible bugs after Johnny's valgrinding
+
 2004-04-13  Andras Varga
 
 	* cmessage.cc: implemented new cMessage methods setControlInfo(), 
